--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
-    <title>Contact | La chouette agence</title>
+    <title>La Chouette agence - Contact</title>
 </head>
 <body>
 <!-- Principal conteneur -->
