--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
     <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	
+
+	<title>La Chouette agence - Accueil</title>
+
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    <title>Accueil | La chouette agence</title>
-
-<!-- Analytics -->
- 
-<!-- Analytics END -->
 </head>
 <body>
 	<!-- Principal conteneur -->
