--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
+    <meta name="keywords" content="site web, site internet, agence design lyon, agence design, web design, webdesign lyon, agence ux, front-end lyon">
     <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
