--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.webp"/>
+							<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -105,8 +105,12 @@
 					</div>
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.webp"/>
-
+							<blockquote class="mg-md text-center"> 
+								<h2>
+									"La Chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+								</h2>
+								<h3>Maxime Guibard, PDG de À vos fourchettes</h3>
+							</blockquote>
 						</div>
 					</div>
 				</div>
