--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.webp"/>
+							<h2 class="mg-md text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
 						</div>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
