--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html" aria-label="Page d'accueil">Accueil</a>
+								<a href="index.html" aria-label="Lien vers la page d'accueil">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html" aria-label="Page contact">Contact</a>
+								<a href="page2.html" aria-label="Lien vers la page de contact">Contact</a>
 							</li>
 						</ul>
 					</div>
