--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,9 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="40"/></a>
+						<a class="navbar-brand" href="index.html">
+							<img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="40"/>
+						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
@@ -33,10 +35,10 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a href="index.html" aria-label="Lien vers la page d'accueil">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a href="page2.html" aria-label="Lien vers la page de contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -44,65 +46,68 @@
 			</div>
 		</header>
 		<!-- Section contact -->
-		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
-							Parlons web design !
-						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</p>
+		<main id="main">
+			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+				<div class="container bloc-lg">
+					<div class="row">
+						<div class="col-sm-12">
+							<h1 class="text-center hero-bloc-text tc-white">
+								Parlons web design !
+							</h1>
+							<p class="text-center mg-lg tc-white tight-width-whitespace">
+								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+							</p>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- Section formulaire -->
-		<section class="bloc bgc-white l-bloc" id="bloc-7">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-							<div class="form-group">
-								<label>
-									Nom
-								</label>
-								<input id="name" class="form-control" required />
-							</div>
-							<div class="form-group">
-								<label>
-									Adresse email
-								</label>
-								<input id="email" class="form-control" type="email" required />
-							</div>
-							<div class="form-group">
-								<label>
-									Comment nous avez-vous connu ?
-								</label>
-								<input class="form-control" type="email" required id="input_504" />
-							</div>
-							<div class="form-group">
-								<label>
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-							</div> 
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-								Envoyer
-							</button>
-						</form>
-					</div>
-					<div class="col-sm-6">
-						<p>
-							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-						</p>
+			</section>
+			<!-- Section formulaire -->
+			<section class="bloc bgc-white l-bloc" id="bloc-7">
+				<div class="container bloc-lg">
+					<div class="row">
+						<div class="col-sm-6">
+							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+								<div class="form-group" aria-label="coordonnées">
+									<label>
+										Nom
+									</label>
+									<input id="name" class="form-control" aria-label="Entrez votre nom" required />
+								</div>
+								<div class="form-group">
+									<label>
+										Adresse email
+									</label>
+									<input id="email" class="form-control" type="email" aria-label="Entrez votre e-mail" required />
+								</div>
+								<div class="form-group">
+									<label>
+										Comment nous avez-vous connu ?
+									</label>
+									<input class="form-control" type="email" aria-label="Renseignez comment vous nous avez connu" required id="input_504" />
+								</div>
+								<div class="form-group">
+									<label>
+										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									</label>
+									<textarea id="message" class="form-control" rows="4" cols="50" aria-label="Décrivez votre projet" required></textarea>
+								</div> 
+								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyez votre message">
+									Envoyer
+								</button>
+							</form>
+						</div>
+						<div class="col-sm-6">
+							<p>
+								contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+							</p>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			</section>
+			<!-- ScrollToTop Button -->
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		</main>
 		<!-- Footer -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -114,22 +119,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien vers Twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien vers Facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien vers Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien vers Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
