--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html">
-							<img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="40"/>
+							<img src="img/la-chouette-agence.webp" alt="Logo de la chouette agence" height="40"/>
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
@@ -51,7 +51,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web Lyon, création logo Lyon" />
+							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de la chouette agence" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								La chouette agence.
 							</h1>
