--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="site web, site internet, agence design lyon, agence design, web design, webdesign lyon, agence ux, front-end lyon">
+    <meta name="keywords" content="">
     <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
-	<title>La Chouette agence - Accueil</title>
-
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    
+	<title>La Chouette agence - Contact</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -23,7 +21,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html">
-							<img src="img/la-chouette-agence.webp" alt="Logo de la chouette agence" height="40"/>
+							<img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="40"/>
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
@@ -45,167 +43,75 @@
 				</nav>
 			</div>
 		</header>
+		<!-- Section contact -->
 		<main id="main">
-			<!-- Section presentation -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace">
+					<div class="row">
 						<div class="col-sm-12">
-							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de la chouette agence" />
-							<h1 class="text-center hero-bloc-text tc-white ">
-								La chouette agence.
+							<h1 class="text-center hero-bloc-text tc-black">
+								Parlons web design !
 							</h1>
-							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Rejoindre la page contact">Contact</a>
-							</div>
+							<p class="text-center mg-lg tc-black tight-width-whitespace">
+								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- Section services -->
-			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
-				<div class="container bloc-md">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
-						</div>
-					</div>
-					<div class="row voffset-lg med-width-whitespace">
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Web design
-							</h3>
-							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								&nbsp;Stratégie
-							</h3>
-							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Illustrations
-							</h3>
-							<p class="text-center ">
-								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-							</p>
-						</div>
-					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<blockquote class="mg-md text-center"> 
-								<h2>
-									"La Chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
-								</h2>
-								<h3>Maxime Guibard, PDG de À vos fourchettes</h3>
-							</blockquote>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- Section description -->
-			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace black-background">
-						<div class="col-sm-12">
-							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-							</h2>
-							<h3 class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
-							</h3>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- Section Portfolio -->
-			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+			<!-- Section formulaire -->
+			<section class="bloc bgc-white l-bloc" id="bloc-7">
 				<div class="container bloc-lg">
 					<div class="row">
-						<div class="col-sm-12 text-center">
-							<h2 class="mg-md text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
-						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-								<img src="img/1.webp" alt="Refonte du site web d'un journal lyonnais" class="img-responsive portfolio-thumb" /></a>
-							<h3 class="mg-md text-center">
-								Refonte d'un site web pour un journal local
-							</h3>
-							<p class="text-center">
-								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-							</p>
-						</div>
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-								<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"/></a>
-							<h3 class="mg-md text-center">
-								Création d'un site web pour photographes
-							</h3>
-							<p class="text-center">
-								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-							</p>
-						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-								<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageurs"/></a>
-							<h3 class="mg-md text-center">
-								Création d'un site internet pour un voyageur
-							</h3>
-							<p class="text-center">
-								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-							</p>
+							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+								<div class="form-group" aria-label="coordonnées">
+									<label>
+										Nom
+									</label>
+									<input id="name" class="form-control" aria-label="Entrez votre nom" required />
+								</div>
+								<div class="form-group">
+									<label>
+										Adresse email
+									</label>
+									<input id="email" class="form-control" type="email" aria-label="Entrez votre e-mail" required />
+								</div>
+								<div class="form-group">
+									<label>
+										Comment nous avez-vous connu ?
+									</label>
+									<input class="form-control" type="email" aria-label="Renseignez comment vous nous avez connu" required id="input_504" />
+								</div>
+								<div class="form-group">
+									<label>
+										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									</label>
+									<textarea id="message" class="form-control" rows="4" cols="50" aria-label="Décrivez votre projet" required></textarea>
+								</div> 
+								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyez votre message">
+									Envoyer
+								</button>
+							</form>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-								<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
-							<h3 class="mg-md text-center">
-								Conception d'un site pour une agence de mariage
-							</h3>
-							<p class="text-center">
-								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+							<p>
+								contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- Section contact -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-				<div class="container bloc-lg">
-					<div class="row">
-						<h2 class="mg-md text-center tc-white">
-							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-						</h2>
-						<div class="col-sm-12 text-center">
-							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Aller sur la page contact">Contact</a>
-						</div>
-					</div>
-				</div>
-			</section>
+			<!-- ScrollToTop Button -->
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		</main>
 		<!-- Footer -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center tc-black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
@@ -235,10 +141,10 @@
 			</div>
 		</footer>
 	</div>
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
-<script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js"></script>
+<script src="./js/jquery-2.1.0.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/blocs.min.js"></script>
+<script src="./js/jqBootstrapValidation.js"></script>
+<script src="./js/formHandler.js"></script>
 </body>
 </html>
