--- a/page2.html
+++ b/page2.html
@@ -51,7 +51,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-black">
+							<h1 class="text-center hero-bloc-text tc-white">
 								Parlons web design !
 							</h1>
 							<p class="text-center mg-lg tc-black tight-width-whitespace">
