--- a/page2.html
+++ b/page2.html
@@ -51,7 +51,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-white">
+							<h1 class="text-center hero-bloc-text tc-black">
 								Parlons web design !
 							</h1>
 							<p class="text-center mg-lg tc-black tight-width-whitespace">
@@ -113,7 +113,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center tc-black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
